--- a/index.html
+++ b/index.html
@@ -188,7 +188,8 @@
                     <div class="text-holder wow fadeInUp" data-wow-duration="1.5s">
                         <h1>KNOW MORE <br> ABOUT ME</h1>
                         <p>It&rsquo;s Varun, I hope to specialize in the field of network engineering and work in the domain of cybersecurity
-                            and threat analysis. I was always intrigued by the thought of testing the security of computer systems and try to find vulnerabilities in them.
+                            and threat analysis. I was always intrigued by the thought of testing the security of computer systems and and would like to pursue
+                            masters in the same field to have a better and specialized understanding of the subject
                             <!-- raw HTML omitted -->
                             Stay connected with me&hellip;&hellip;&hellip;&hellip;</p>
 
