--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section id="home" class="min-h-screen flex items-center justify-center text-center px-4 pt-24 pb-12 bg-main relative overflow-hidden">
         <canvas id="hero-particles" class="absolute inset-0 z-0"></canvas>
         <div class="relative z-10 max-w-3xl mx-auto">
-            <img src="uploaded:WhatsApp Image 2025-06-24 at 21.46.31.jpg-0ea45379-a29f-4d0d-bcbe-41f381b50cb7" alt="Profile Picture" class="rounded-full mx-auto mb-6 shadow-md w-32 h-32 object-cover">
+            <img src="assets/WhatsApp Image 2025-06-24 at 21.46.31.jpg" alt="Profile Picture" class="rounded-full mx-auto mb-6 shadow-md w-32 h-32 object-cover">
             <p class="text-secondary mb-4 text-lg">Hi, I'm Varun 👋</p>
             <h1 class="text-4xl md:text-5xl font-extrabold leading-tight text-main mb-3">
                 IT and Security Analyst
@@ -77,10 +77,10 @@
             <!-- Graduation Photos Grid -->
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-xl mx-auto">
                 <div class="rounded-xl overflow-hidden shadow-base">
-                    <img src="uploaded:WhatsApp Image 2025-06-24 at 21.57.49.jpg-712bd41a-ed95-40d6-8752-2a86e4655c3a" alt="Graduation Photo 1" class="w-full h-auto object-cover">
+                    <img src="assets/WhatsApp Image 2025-06-24 at 21.57.49.jpg" alt="Graduation Photo 1" class="w-full h-auto object-cover">
                 </div>
                 <div class="rounded-xl overflow-hidden shadow-base">
-                    <img src="uploaded:WhatsApp Image 2025-06-24 at 22.02.12.jpg-e112be0b-0c82-45c5-b905-6fad808691b6" alt="Graduation Photo 2" class="w-full h-auto object-cover">
+                    <img src="assets/WhatsApp Image 2025-06-24 at 22.02.12.jpg" alt="Graduation Photo 2" class="w-full h-auto object-cover">
                 </div>
             </div>
         </div>
@@ -121,7 +121,7 @@
                 Collaborate for impactful cybersecurity results.
             </h2>
 
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8"> <!-- Changed lg:grid-cols-4 to lg:grid-cols-2 here -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8">
                 <div class="card">
                     <div class="text-accent text-4xl mb-4"><i class="fas fa-bug"></i></div>
                     <h3 class="sub-section-header text-main mb-3">Vulnerability Management & Analysis</h3>
@@ -181,7 +181,7 @@
         <div class="container mx-auto text-center">
             <h2 class="section-header text-main mb-16">Hands-on Experience & Practical Applications</h2>
 
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-8 lg:grid-cols-2 lg:gap-12 text-left"> <!-- Changed lg:grid-cols-3 to lg:grid-cols-2 here -->
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8 lg:grid-cols-2 lg:gap-12 text-left">
                 <div class="card">
                     <h3 class="sub-section-header text-main mb-2">VPN Protocol Testing & Analysis</h3>
                     <p class="text-secondary text-sm mb-4">Practical Application</p>
@@ -241,7 +241,7 @@
         <div class="container mx-auto text-center">
             <h2 class="section-header text-main mb-16">Notable Projects</h2>
 
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-8 lg:grid-cols-2 lg:gap-12 text-left"> <!-- Changed lg:grid-cols-3 to lg:grid-cols-2 here -->
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8 lg:grid-cols-2 lg:gap-12 text-left">
                 <div class="card">
                     <h3 class="sub-section-header text-main mb-2">Enhancing VPN Performance using an Adaptive Protocol Selector System (APSS)</h3>
                     <p class="text-secondary text-sm mb-4">MSc. Dissertation Project</p>
