--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section id="home" class="min-h-screen flex items-center justify-center text-center px-4 pt-24 pb-12 bg-main relative overflow-hidden">
         <canvas id="hero-particles" class="absolute inset-0 z-0"></canvas>
         <div class="relative z-10 max-w-3xl mx-auto">
-            <img src="assets/WhatsApp Image 2025-06-24 at 21.46.31.jpg" onerror="this.onerror=null; this.src='https://placehold.co/120x120/cc3333/ffffff?text=Error';" alt="Profile Picture" class="rounded-full mx-auto mb-6 shadow-md w-32 h-32 object-cover">
+            <img src="assets/Profile.jpeg" onerror="this.onerror=null; this.src='https://placehold.co/120x120/cc3333/ffffff?text=Error';" alt="Profile Picture" class="rounded-full mx-auto mb-6 shadow-md w-32 h-32 object-cover">
             <p class="text-secondary mb-4 text-lg">Hi, I'm Varun 👋</p>
             <h1 class="text-4xl md:text-5xl font-extrabold leading-tight text-main mb-3">
                 IT and Security Analyst
@@ -77,10 +77,10 @@
             <!-- Graduation Photos Grid -->
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-xl mx-auto">
                 <div class="rounded-xl overflow-hidden shadow-base">
-                    <img src="assets/WhatsApp Image 2025-06-24 at 21.57.49.jpg" onerror="this.onerror=null; this.src='https://placehold.co/300x400/cc3333/ffffff?text=Error';" alt="Graduation Photo 1" class="w-full h-auto object-cover">
+                    <img src="assets/GraduationSolo.jpeg" onerror="this.onerror=null; this.src='https://placehold.co/300x400/cc3333/ffffff?text=Error';" alt="Graduation Photo 1" class="w-full h-auto object-cover">
                 </div>
                 <div class="rounded-xl overflow-hidden shadow-base">
-                    <img src="assets/WhatsApp Image 2025-06-24 at 22.02.12.jpg" onerror="this.onerror=null; this.src='https://placehold.co/300x400/cc3333/ffffff?text=Error';" alt="Graduation Photo 2" class="w-full h-auto object-cover">
+                    <img src="assets/GraduationGroup.jpeg" onerror="this.onerror=null; this.src='https://placehold.co/300x400/cc3333/ffffff?text=Error';" alt="Graduation Photo 2" class="w-full h-auto object-cover">
                 </div>
             </div>
         </div>
