--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 </head>
 <body class="bg-main text-main antialiased">
 
+    <!-- Global Blinking Background Dots -->
+    <div id="blinking-dots-container" class="fixed inset-0 w-full h-full pointer-events-none overflow-hidden z-0"></div>
+
     <!-- Navigation Bar -->
     <nav class="fixed w-full z-50 py-4 shadow-base">
         <div class="container mx-auto px-6 flex justify-between items-center">
@@ -35,10 +38,9 @@
     </nav>
 
     <!-- Hero Section -->
-    <section id="home" class="min-h-screen flex items-center justify-center text-center px-4 pt-24 pb-12 bg-main relative overflow-hidden">
-        <canvas id="hero-particles" class="absolute inset-0 z-0"></canvas>
-        <div class="relative z-10 max-w-3xl mx-auto">
-            <img src="assets/Profile.jpeg" onerror="this.onerror=null; this.src='https://placehold.co/120x120/cc3333/ffffff?text=Error';" alt="Profile Picture" class="rounded-full mx-auto mb-6 shadow-md w-32 h-32 object-cover">
+    <section id="home" class="min-h-screen flex items-center justify-center text-center px-4 pt-24 pb-12 bg-main relative z-10 overflow-hidden">
+        <div class="max-w-3xl mx-auto">
+            <img src="assets/Profile.jpeg" onerror="this.onerror=null; this.src='https://placehold.co/180x180/cc3333/ffffff?text=Error';" alt="Profile Picture" class="rounded-full mx-auto mb-6 shadow-md w-44 h-44 object-cover border-4 border-accent">
             <p class="text-secondary mb-4 text-lg">Hi, I'm Varun 👋</p>
             <h1 class="text-4xl md:text-5xl font-extrabold leading-tight text-main mb-3">
                 IT and Security Analyst
@@ -53,7 +55,7 @@
     </section>
 
     <!-- About Me Section -->
-    <section id="about" class="py-20 px-6 bg-section rounded-section mx-auto max-w-5xl my-12 shadow-base">
+    <section id="about" class="py-20 px-6 bg-section rounded-section mx-auto max-w-5xl my-12 shadow-base relative z-10">
         <div class="container mx-auto text-center">
             <h2 class="section-header text-main mb-16">About Me</h2>
             <div class="card text-left mb-12">
@@ -87,7 +89,7 @@
     </section>
 
     <!-- Education Section -->
-    <section id="education" class="py-20 px-6 bg-main rounded-section mx-auto max-w-5xl my-12 shadow-base">
+    <section id="education" class="py-20 px-6 bg-main rounded-section mx-auto max-w-5xl my-12 shadow-base relative z-10">
         <div class="container mx-auto text-center">
             <h2 class="section-header text-main mb-16">Education</h2>
 
@@ -115,7 +117,7 @@
     </section>
 
     <!-- Expertise/Services Section -->
-    <section id="expertise" class="py-20 px-6 bg-section rounded-section mx-auto max-w-5xl my-12 shadow-base">
+    <section id="expertise" class="py-20 px-6 bg-section rounded-section mx-auto max-w-5xl my-12 shadow-base relative z-10">
         <div class="container mx-auto text-center">
             <h2 class="section-header text-main mb-16">
                 Collaborate for impactful cybersecurity results.
@@ -147,7 +149,7 @@
     </section>
 
     <!-- Core Skills & Tools Section -->
-    <section class="py-16 px-6 bg-section">
+    <section class="py-16 px-6 bg-section relative z-10">
         <div class="container mx-auto text-center max-w-5xl">
             <h3 class="sub-section-header text-main mb-10">Core Skills & Tools</h3>
             <div class="flex flex-wrap justify-center items-center gap-x-12 gap-y-8 opacity-75">
@@ -177,11 +179,11 @@
     </section>
 
     <!-- Hands-on Experience & Practical Applications Section -->
-    <section id="practical-applications" class="py-20 px-6 bg-main rounded-section mx-auto max-w-5xl my-12 shadow-base">
+    <section id="practical-applications" class="py-20 px-6 bg-main rounded-section mx-auto max-w-5xl my-12 shadow-base relative z-10">
         <div class="container mx-auto text-center">
             <h2 class="section-header text-main mb-16">Hands-on Experience & Practical Applications</h2>
 
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-8 lg:grid-cols-2 lg:gap-12 text-left">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 lg:gap-12 text-left">
                 <div class="card">
                     <h3 class="sub-section-header text-main mb-2">VPN Protocol Testing & Analysis</h3>
                     <p class="text-secondary text-sm mb-4">Practical Application</p>
@@ -237,7 +239,7 @@
     </section>
 
     <!-- Projects Section -->
-    <section id="projects" class="py-20 px-6 bg-main rounded-section mx-auto max-w-5xl my-12 shadow-base">
+    <section id="projects" class="py-20 px-6 bg-main rounded-section mx-auto max-w-5xl my-12 shadow-base relative z-10">
         <div class="container mx-auto text-center">
             <h2 class="section-header text-main mb-16">Notable Projects</h2>
 
@@ -302,7 +304,7 @@
     </section>
 
     <!-- Experience Section -->
-    <section id="experience" class="py-20 px-6 bg-section rounded-section mx-auto max-w-5xl my-12 shadow-base">
+    <section id="experience" class="py-20 px-6 bg-section rounded-section mx-auto max-w-5xl my-12 shadow-base relative z-10">
         <div class="container mx-auto text-center">
             <h2 class="section-header text-main mb-16">Professional Experience</h2>
 
@@ -348,17 +350,17 @@
     </section>
 
     <!-- Certifications Section -->
-    <section id="certifications" class="py-20 px-6 bg-main rounded-section mx-auto max-w-5xl my-12 shadow-base">
+    <section id="certifications" class="py-20 px-6 bg-main rounded-section mx-auto max-w-5xl my-12 shadow-base relative z-10">
         <div class="container mx-auto text-center">
             <h2 class="section-header text-main mb-16">Certifications</h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8" id="certifications-grid">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8" id="certifications-grid">
                 <!-- Certifications will be dynamically loaded here by JavaScript -->
             </div>
         </div>
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="py-20 px-6 bg-section rounded-section mx-auto max-w-3xl my-12 shadow-base">
+    <section id="contact" class="py-20 px-6 bg-section rounded-section mx-auto max-w-3xl my-12 shadow-base relative z-10">
         <div class="container mx-auto text-center">
             <h2 class="section-header text-main mb-16">Get in Touch</h2>
 
@@ -383,7 +385,7 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-main py-8 text-center text-secondary text-sm">
+    <footer class="bg-main py-8 text-center text-secondary text-sm relative z-10">
         <div class="container mx-auto px-4">
             &copy; 2024 Varun Godambe. All rights reserved.
             <p class="mt-2">Built with passion for cybersecurity excellence.</p>
