--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     <nav class="fixed w-full z-50 py-4 nav-bg-blur shadow-base">
         <div class="container mx-auto px-6 flex justify-between items-center">
             <div class="flex items-center space-x-6">
-                <a href="mailto:godambevarun@gmail.com" class="text-secondary hover:text-accent transition duration-300">
+                <a href="mailto:godambevarun@gmail.com" class="text-secondary hover:text-accent transition duration-300 text-sm md:text-base">
                     <i class="fas fa-envelope mr-2"></i>godambevarun@gmail.com
                 </a>
             </div>
             <div class="flex items-center space-x-6">
-                <a href="https://www.linkedin.com/in/varun-godambe-85781b1a0/" target="_blank" rel="noopener noreferrer" class="text-secondary hover:text-accent transition duration-300">
+                <a href="https://www.linkedin.com/in/varun-godambe-85781b1a0/" target="_blank" rel="noopener noreferrer" class="text-secondary hover:text-accent transition duration-300 text-sm md:text-base">
                     LinkedIn
                 </a>
                 <button id="theme-toggle" class="text-secondary hover:text-accent transition duration-300 focus:outline-none p-2 rounded-full text-lg">
@@ -40,7 +40,7 @@
     <!-- Hero Section -->
     <section id="home" class="min-h-screen flex items-center justify-center text-center px-4 pt-24 pb-12 bg-main relative z-10 overflow-hidden">
         <div class="max-w-3xl mx-auto">
-            <img src="assets/Profile.jpeg" onerror="this.onerror=null; this.src='https://placehold.co/180x180/cc3333/ffffff?text=Error';" alt="Profile Picture" class="rounded-full mx-auto mb-6 shadow-lg w-52 h-52 object-cover border-4 border-accent-light">
+            <img src="assets/Profile.jpeg" onerror="this.onerror=null; this.src='https://placehold.co/180x180/cc3333/ffffff?text=Error';" alt="Profile Picture" class="rounded-full mx-auto mb-6 shadow-lg w-52 h-52 object-cover border-4 border-accent">
             <p class="text-secondary mb-4 text-lg">Hi, I'm Varun 👋</p>
             <h1 class="text-4xl md:text-5xl font-extrabold leading-tight text-main mb-3 text-glow">
                 IT and Security Analyst
