--- a/index.html
+++ b/index.html
@@ -77,12 +77,9 @@
             </div>
 
             <!-- Graduation Photos Grid -->
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-xl mx-auto">
+            <div class="grid grid-cols-1 md:grid-cols-1 max-w-xl mx-auto">
                 <div class="rounded-xl overflow-hidden shadow-base card-hover-effect">
                     <img src="assets/GraduationSolo.jpeg" onerror="this.onerror=null; this.src='https://placehold.co/300x400/cc3333/ffffff?text=Error';" alt="Graduation Photo 1" class="w-full h-auto object-cover">
-                </div>
-                <div class="rounded-xl overflow-hidden shadow-base card-hover-effect">
-                    <img src="assets/GraduationGroup.jpeg" onerror="this.onerror=null; this.src='https://placehold.co/300x400/cc3333/ffffff?text=Error';" alt="Graduation Photo 2" class="w-full h-auto object-cover">
                 </div>
             </div>
         </div>
