--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
-    <!-- Google Font: IBM Plex Mono -->
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&family=Orbitron:wght@700&display=swap" rel="stylesheet">
     
     <!-- Custom Stylesheet -->
     <link rel="stylesheet" href="style.css">
@@ -56,9 +56,11 @@
         <!-- Home Section -->
         <section id="home" class="min-h-screen flex items-center justify-center text-center px-4 pt-24 pb-12 overflow-hidden">
             <div id="hero-content" class="max-w-3xl mx-auto">
-                <img src="https://varun-godambe.github.io/assets/Profile.jpeg" onerror="this.onerror=null; this.src='https://placehold.co/192x192/0a0f14/e2e8f0?text=VG';" alt="Profile Picture" class="hero-item profile-glow rounded-full mx-auto mb-6 shadow-2xl w-40 h-40 sm:w-48 sm:h-48 object-cover border-4 border-accent">
+                <div class="relative inline-block mb-6 hero-item" id="profile-picture-wrapper">
+                    <img src="https://varun-godambe.github.io/assets/Profile.jpeg" onerror="this.onerror=null; this.src='https://placehold.co/192x192/0a0f14/e2e8f0?text=VG';" alt="Profile Picture" class="profile-image rounded-full mx-auto shadow-2xl w-40 h-40 sm:w-48 sm:h-48 object-cover border-4 border-accent">
+                </div>
                 <p class="hero-item text-secondary mb-4 text-lg">Hi, I'm Varun 👋</p>
-                <h1 class="hero-item text-4xl sm:text-5xl md:text-6xl font-extrabold leading-tight text-main mb-3 text-glow">IT and Security Analyst</h1>
+                <h1 class="hero-item hero-title text-4xl sm:text-5xl md:text-6xl font-extrabold leading-tight text-main mb-3 text-glow">IT and Security Analyst</h1>
                 <p class="hero-item text-lg md:text-xl text-secondary mb-8">MSc. Network and Information Security | BE Information Technology | Cybersecurity | VPN</p>
                 <a href="#projects" class="hero-item btn-primary inline-block group">
                     Latest Projects <i class="fas fa-arrow-right ml-2 transition-transform duration-300 group-hover:translate-x-1"></i>
@@ -71,7 +73,7 @@
             <div class="frosted-card rounded-xl mx-auto max-w-5xl shadow-xl p-6 sm:p-10 md:p-12">
                 <div class="container mx-auto text-center">
                     <h2 class="text-3xl font-bold text-main mb-12 text-glow">About Me</h2>
-                    <div class="text-left text-main max-w-3xl mx-auto space-y-5">
+                    <div class="text-left text-main text-justify max-w-3xl mx-auto space-y-5">
                         <p>I'm an MSc graduate in Network and Information Security from Kingston University London, with a strong foundation in cybersecurity, secure infrastructure, and risk assessment. I've worked on identifying technical vulnerabilities, understanding their business impact, and supporting security best practices across both cloud and on-prem environments. I approach problems with structure and clarity, always looking to balance deep technical understanding with practical application.</p>
                         <p>During my dissertation, I focused on the critical role of VPNs in maintaining secure communications, analyzing how different protocols (OpenVPN, IPSec, WireGuard) balance performance and security. My research culminated in the conceptual design of an <span class="text-accent font-bold">Adaptive Protocol Selector System (APSS)</span>, aimed at dynamically selecting the optimal VPN protocol based on real-time network conditions.</p>
                         <p>I excel at communicating risks effectively, whether explaining a vulnerability to a stakeholder or discussing compliance needs with a team. I'm detail-oriented, proactive, and work best in environments where clarity, collaboration, and resilience matter, especially in high-pressure settings where secure systems make a real difference.</p>
@@ -86,7 +88,7 @@
                 <div class="container mx-auto text-center">
                     <h2 class="text-3xl font-bold text-main mb-16 text-glow">Fields of Expertise</h2>
                     <div class="grid grid-cols-1 sm:grid-cols-2 gap-8">
-                        <div class="p-4 rounded-lg expand-wrapper transition-all duration-300 hover:bg-white/5 glow-on-hover">
+                        <div class="p-4 rounded-lg expand-wrapper transition-all duration-300">
                             <div class="flex flex-col items-center text-center">
                                 <i class="fas fa-shield-virus text-4xl text-accent mb-4"></i>
                                 <h3 class="font-bold text-main text-lg">Vulnerability Management & Analysis</h3>
@@ -95,7 +97,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="p-4 rounded-lg expand-wrapper transition-all duration-300 hover:bg-white/5 glow-on-hover">
+                        <div class="p-4 rounded-lg expand-wrapper transition-all duration-300">
                             <div class="flex flex-col items-center text-center">
                                 <i class="fas fa-network-wired text-4xl text-accent mb-4"></i>
                                 <h3 class="font-bold text-main text-lg">Secure Infrastructure Design</h3>
@@ -104,7 +106,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="p-4 rounded-lg expand-wrapper transition-all duration-300 hover:bg-white/5 glow-on-hover">
+                        <div class="p-4 rounded-lg expand-wrapper transition-all duration-300">
                             <div class="flex flex-col items-center text-center">
                                 <i class="fas fa-clipboard-check text-4xl text-accent mb-4"></i>
                                 <h3 class="font-bold text-main text-lg">Risk Assessment & Compliance</h3>
@@ -113,7 +115,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="p-4 rounded-lg expand-wrapper transition-all duration-300 hover:bg-white/5 glow-on-hover">
+                        <div class="p-4 rounded-lg expand-wrapper transition-all duration-300">
                            <div class="flex flex-col items-center text-center">
                                 <i class="fas fa-code text-4xl text-accent mb-4"></i>
                                 <h3 class="font-bold text-main text-lg">Secure Development & Automation</h3>
@@ -144,7 +146,7 @@
                 <div class="container mx-auto text-center">
                     <h2 class="text-3xl font-bold text-main mb-16 text-glow">Notable Projects</h2>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-8 text-left">
-                        <div class="p-4 rounded-lg expand-wrapper transition-all duration-300 hover:bg-white/5 glow-on-hover">
+                        <div class="p-4 rounded-lg expand-wrapper transition-all duration-300">
                             <h3 class="text-xl font-bold text-main mb-2">Enhancing VPN Performance using APSS</h3>
                             <p class="text-secondary text-sm mb-4">MSc. Dissertation Project</p>
                             <div class="expand-content">
@@ -154,7 +156,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="p-4 rounded-lg expand-wrapper transition-all duration-300 hover:bg-white/5 glow-on-hover">
+                        <div class="p-4 rounded-lg expand-wrapper transition-all duration-300">
                             <h3 class="text-xl font-bold text-main mb-2">Commercial Complex Network Design</h3>
                             <p class="text-secondary text-sm mb-4">Cisco Virtual Internship Project</p>
                              <div class="expand-content">
@@ -164,7 +166,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="p-4 rounded-lg expand-wrapper transition-all duration-300 hover:bg-white/5 glow-on-hover">
+                        <div class="p-4 rounded-lg expand-wrapper transition-all duration-300">
                             <h3 class="text-xl font-bold text-main mb-2">Adaptive E-Learning Framework</h3>
                             <p class="text-secondary text-sm mb-4">BE. Final Year Project</p>
                             <div class="expand-content">
@@ -174,7 +176,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="p-4 rounded-lg expand-wrapper transition-all duration-300 hover:bg-white/5 glow-on-hover">
+                        <div class="p-4 rounded-lg expand-wrapper transition-all duration-300">
                             <h3 class="text-xl font-bold text-main mb-2">Factory Automation System</h3>
                             <p class="text-secondary text-sm mb-4">Python Development Project</p>
                             <div class="expand-content">
@@ -195,7 +197,7 @@
                 <div class="container mx-auto text-center">
                     <h2 class="text-3xl font-bold text-main mb-16 text-glow">Professional Experience</h2>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-x-8 gap-y-2 text-left">
-                        <div class="p-4 rounded-lg expand-wrapper transition-all duration-300 hover:bg-white/5 glow-on-hover">
+                        <div class="p-4 rounded-lg expand-wrapper transition-all duration-300">
                             <h3 class="text-xl font-bold text-main mb-2">Teaching Volunteer</h3>
                             <p class="text-secondary text-sm">Kingston University | Nov 2023 - Oct 2024</p>
                             <div class="expand-content mt-4">
@@ -205,7 +207,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="p-4 rounded-lg expand-wrapper transition-all duration-300 hover:bg-white/5 glow-on-hover">
+                        <div class="p-4 rounded-lg expand-wrapper transition-all duration-300">
                             <h3 class="text-xl font-bold text-main mb-2">AI/ML Virtual Internship</h3>
                             <p class="text-secondary text-sm">Amazon Web Services | Oct 2021 - Dec 2021</p>
                             <div class="expand-content mt-4">
@@ -215,7 +217,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="p-4 rounded-lg expand-wrapper transition-all duration-300 hover:bg-white/5 glow-on-hover">
+                        <div class="p-4 rounded-lg expand-wrapper transition-all duration-300">
                             <h3 class="text-xl font-bold text-main mb-2">Software Intern</h3>
                             <p class="text-secondary text-sm">Postman | Jun 2021 - Aug 2021</p>
                             <div class="expand-content mt-4">
@@ -225,7 +227,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="p-4 rounded-lg expand-wrapper transition-all duration-300 hover:bg-white/5 glow-on-hover">
+                        <div class="p-4 rounded-lg expand-wrapper transition-all duration-300">
                             <h3 class="text-xl font-bold text-main mb-2">Cybersecurity Intern</h3>
                             <p class="text-secondary text-sm">Cisco Networking Academy | Apr 2021 - Jun 2021</p>
                             <div class="expand-content mt-4">
