--- a/index.html
+++ b/index.html
@@ -18,12 +18,17 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&family=Orbitron:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&family=Montserrat:wght@700&display=swap" rel="stylesheet">
     
     <!-- Custom Stylesheet -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="antialiased dark">
+
+    <!-- Preloader -->
+    <div id="preloader" class="fixed inset-0 z-[100] flex items-center justify-center bg-[#0a0f14]">
+        <div class="loader"></div>
+    </div>
 
     <canvas id="animated-background-canvas" class="fixed inset-0 w-full h-full pointer-events-none z-0"></canvas>
 
@@ -52,15 +57,13 @@
         </div>
     </nav>
 
-    <main class="relative z-10 sm:pb-0 pb-20">
+    <main id="main-content" class="relative z-10 sm:pb-0 pb-20 opacity-0">
         <!-- Home Section -->
         <section id="home" class="min-h-screen flex items-center justify-center text-center px-4 pt-24 pb-12 overflow-hidden">
             <div id="hero-content" class="max-w-3xl mx-auto">
-                <div class="relative inline-block mb-6 hero-item" id="profile-picture-wrapper">
-                    <img src="https://varun-godambe.github.io/assets/Profile.jpeg" onerror="this.onerror=null; this.src='https://placehold.co/192x192/0a0f14/e2e8f0?text=VG';" alt="Profile Picture" class="profile-image rounded-full mx-auto shadow-2xl w-40 h-40 sm:w-48 sm:h-48 object-cover border-4 border-accent">
-                </div>
+                <img src="https://varun-godambe.github.io/assets/Profile.jpeg" onerror="this.onerror=null; this.src='https://placehold.co/192x192/0a0f14/e2e8f0?text=VG';" alt="Profile Picture" class="hero-item profile-image rounded-full mx-auto mb-6 shadow-2xl w-40 h-40 sm:w-48 sm:h-48 object-cover border-4 border-accent">
                 <p class="hero-item text-secondary mb-4 text-lg">Hi, I'm Varun 👋</p>
-                <h1 class="hero-item hero-title text-4xl sm:text-5xl md:text-6xl font-extrabold leading-tight text-main mb-3 text-glow">IT and Security Analyst</h1>
+                <h1 class="hero-item hero-title text-4xl sm:text-5xl md:text-6xl font-bold leading-tight text-main mb-3 text-glow">IT and Security Analyst</h1>
                 <p class="hero-item text-lg md:text-xl text-secondary mb-8">MSc. Network and Information Security | BE Information Technology | Cybersecurity | VPN</p>
                 <a href="#projects" class="hero-item btn-primary inline-block group">
                     Latest Projects <i class="fas fa-arrow-right ml-2 transition-transform duration-300 group-hover:translate-x-1"></i>
