--- a/index.html
+++ b/index.html
@@ -247,11 +247,11 @@
 
         <!-- Certifications Section -->
         <section id="certifications" class="py-20 sm:py-24 px-4 fade-in-section">
-            <div class="frosted-card rounded-xl mx-auto max-w-5xl shadow-xl p-6 sm:p-10 md:p-12">
+            <div class="frosted-card rounded-xl mx-auto max-w-5xl shadow-xl p-6 sm:p-10 md:p-12 overflow-hidden">
                 <div class="container mx-auto text-center">
                     <h2 class="text-3xl font-bold text-main mb-16 text-glow">Certifications</h2>
                     <div id="certifications-grid-wrapper" class="relative">
-                        <div id="certifications-grid" class="cert-carousel">
+                        <div id="certifications-grid" class="cert-carousel md:grid md:grid-cols-2 lg:grid-cols-3 md:gap-6">
                             <!-- Certs loaded here -->
                         </div>
                     </div>
