--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <p class="hero-item text-secondary mb-4 text-lg">Hi, I'm Varun 👋</p>
                 <h1 class="hero-item hero-title text-4xl sm:text-5xl md:text-6xl font-bold leading-tight text-main mb-3 text-glow">IT and Security Analyst</h1>
                 <p class="hero-item text-lg md:text-xl text-secondary mb-8">MSc. Network and Information Security | BE Information Technology | Cybersecurity | VPN</p>
-                <a href="#projects" class="hero-item btn-hero inline-block group">
+                <a href="#projects" class="hero-item btn-primary inline-block group">
                     Latest Projects <i class="fas fa-arrow-right ml-2 transition-transform duration-300 group-hover:translate-x-1"></i>
                 </a>
             </div>
@@ -78,7 +78,7 @@
                     <h2 class="text-3xl font-bold text-main mb-12 text-glow">About Me</h2>
                     <div class="text-left text-center sm:text-justify max-w-3xl mx-auto space-y-5">
                         <p>I'm an MSc graduate in Network and Information Security from Kingston University London, with a strong foundation in cybersecurity, secure infrastructure, and risk assessment. I've worked on identifying technical vulnerabilities, understanding their business impact, and supporting security best practices across both cloud and on-prem environments. I approach problems with structure and clarity, always looking to balance deep technical understanding with practical application.</p>
-                        <p>During my dissertation, I focused on the critical role of VPNs in maintaining secure communications, analyzing how different protocols (OpenVPN, IPSec, WireGuard) balance performance and security. My research culminated in the conceptual design of a <span class="font-bold text-main">Adaptive Protocol Selector System (APSS)</span>, aimed at dynamically selecting the optimal VPN protocol based on real-time network conditions.</p>
+                        <p>During my dissertation, I focused on the critical role of VPNs in maintaining secure communications, analyzing how different protocols (OpenVPN, IPSec, WireGuard) balance performance and security. My research culminated in the conceptual design of an <span class="font-bold text-main">Adaptive Protocol Selector System (APSS)</span>, aimed at dynamically selecting the optimal VPN protocol based on real-time network conditions.</p>
                         <p>I excel at communicating risks effectively, whether explaining a vulnerability to a stakeholder or discussing compliance needs with a team. I'm detail-oriented, proactive, and work best in environments where clarity, collaboration, and resilience matter, especially in high-pressure settings where secure systems make a real difference.</p>
                     </div>
                 </div>
